k8s/keycloak/ingress-routes/keycloak-dev-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-dev-ingress-route-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.localhost`)
      kind: Rule
      services:
        - name: keycloak-http
          namespace: default
          port: 80
