k8s/keycloak/ingress-routes/keycloak-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.localhost`)
      kind: Rule
      services:
        - name: keycloak-http
          namespace: default
          port: 80
  tls:
    secretName: traefik-tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-route-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`keycloak.localhost`)
      kind: Rule
      services:
        - name: keycloak-http
          namespace: default
          port: 80
      middlewares:
        - name: https
